# AmazonKinesisProducerCpp

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build_armhf.sh  build_clean.sh  build_local.sh  build_target.sh
CMake/Dependencies/: liblog4cplus-CMakeLists.txt
Source/: main.cpp  run.sh
